- Inserido o teste no banco de testes.

--- a/Agenda.DAL.Test/App.config
+++ b/Agenda.DAL.Test/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="connection" connectionString="Data Source=.\sqlexpress;Initial Catalog=Agenda;Integrated Security=true"/>
+    <add name="connectionTest" connectionString="Data Source=.\sqlexpress;Initial Catalog=AgendaTest;Integrated Security=true"/>
   </connectionStrings>
 </configuration>
