--- a/Agenda.DAL.Test/packages.config
+++ b/Agenda.DAL.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.0.78" targetFramework="net461" />
   <package id="NUnit" version="3.13.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net461" />
 </packages>
