--- a/Agenda.Domain/Agenda.Domain.csproj
+++ b/Agenda.Domain/Agenda.Domain.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IContato.cs" />
     <Compile Include="Contato.cs" />
+    <Compile Include="ITelefone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
