--- a/Agenda.Repository/Agenda.Repository.csproj
+++ b/Agenda.Repository/Agenda.Repository.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{36BA2402-B825-436E-9F4F-D4124D66F484}</ProjectGuid>
+    <ProjectGuid>{79A063BE-D3FC-4F19-8E65-73FAFA9D80BE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Agenda.DAL</RootNamespace>
-    <AssemblyName>Agenda.DAL</AssemblyName>
+    <RootNamespace>Agenda.Repository</RootNamespace>
+    <AssemblyName>Agenda.Repository</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,11 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Dapper.2.0.78\lib\net461\Dapper.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,19 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IContatos.cs" />
-    <Compile Include="Contatos.cs" />
-    <Compile Include="ITelefones.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositorioContatos.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Agenda.DAL\Agenda.DAL.csproj">
+      <Project>{36ba2402-b825-436e-9f4f-d4124d66f484}</Project>
+      <Name>Agenda.DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Agenda.Domain\Agenda.Domain.csproj">
       <Project>{029b4c6a-481d-4455-a29b-52bf3157179b}</Project>
       <Name>Agenda.Domain</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
