- Criado o construtor separado do Mock

--- a/Agenda.Repository.Test/Agenda.Repository.Test.csproj
+++ b/Agenda.Repository.Test/Agenda.Repository.Test.csproj
@@ -68,6 +68,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IContratoConstr.cs" />
+    <Compile Include="ITelefoneConst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositorioContatosTest.cs" />
   </ItemGroup>
